--- a/ERPhardware/ERP/templates/main/top_management_dashboard.html
+++ b/ERPhardware/ERP/templates/main/top_management_dashboard.html
@@ -137,7 +137,7 @@
 <body>
     <div class="sidebar">
         <a href="{% url 'top_management_dashboard' %}">Dashboard</a>
-        <a href="{% url 'add_users' %}">Add Users</a>
+        <a href="{% url 'add_users' %}">Add Users</a> <!-- once mag add kag 1 option sa navbar == make urls -> urls.py -->
         <a href="{% url 'inventory' %}">Inventory</a>
         {% comment %} <a href="{% url 'logout' %}">Logout</a> {% endcomment %}
     </div>
