--- a/ERPhardware/ERP/templates/main/property_custodian_dashboard.html
+++ b/ERPhardware/ERP/templates/main/property_custodian_dashboard.html
@@ -1,6 +1,14 @@
-<html><head><title>Property Custodian Dashboard</title>
+{% extends "main/base.html" %}
+{% block page_content %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Property Custodian Dashboard</title>
+    
 </head>
 <body>
-
+            
+    </div>
 </body>
 </html>
+{% endblock %}
