--- a/ERPhardware/ERP/templates/main/purchasing_staff_dashboard.html
+++ b/ERPhardware/ERP/templates/main/purchasing_staff_dashboard.html
@@ -1,6 +1,4 @@
-<html><head><title>Purchasing Staff Dashboard</title>
-</head>
-<body>
+{% extends "main/base.html" %}
+{% block page_content %}
 
-</body>
-</html>
+{% endblock %}
