Internal Trasfer and fixed pdf generation

--- a/ERPhardware/Requisition/templates/requisition/track_requisition.html
+++ b/ERPhardware/Requisition/templates/requisition/track_requisition.html
@@ -81,7 +81,7 @@
                 <div class="nav-icon"><i class="fas fa-box"></i></div>
                 <span>Inventory Replenishment</span>
             </a>
-            <a href="{% url 'redirect_internal_transfer_form' %}" class="dropdown-item nav-item {% if active_page == 'internal_transfer' %}active{% endif %}">
+            <a href="{% url 'internal_transfer_form' %}" class="dropdown-item nav-item {% if active_page == 'internal_transfer' %}active{% endif %}">
                 <div class="nav-icon"><i class="fas fa-exchange-alt"></i></div>
                 <span>Internal Transfer</span>
             </a>
