working rfq creation, input quotation, supplier management, with price history

--- a/ERPhardware/Purchasing/templates/purchasing/purchasing_staff_sup_manage.html
+++ b/ERPhardware/Purchasing/templates/purchasing/purchasing_staff_sup_manage.html
@@ -505,6 +505,7 @@
     <script>
         $(document).ready(function() {
             // Modal Controls
+            console.log("jquery loaded")
             $("#closeSupplierModal, #cancelAddSupplier").click(function(e){
                 e.preventDefault();
                 $("#addSupplierModal").hide();
