--- a/ERPhardware/Purchasing/templates/purchasing/rfq_creation.html
+++ b/ERPhardware/Purchasing/templates/purchasing/rfq_creation.html
@@ -1,5 +1,6 @@
 {% extends "main/base.html" %}
 {% block page_content %}
+
 <style>
     .content-header {
         background: #ffffff;
@@ -634,7 +635,7 @@ searchInput.addEventListener('input', function() {
                 return;
             }
 
-            // Show loading state
+            // Show loading staterfq_creation
             createRfqBtn.disabled = true;
             createRfqBtn.textContent = 'Loading Preview...';
 
