--- a/ERPhardware/Requisition/templates/requisition/base.html
+++ b/ERPhardware/Requisition/templates/requisition/base.html
@@ -443,7 +443,7 @@
 
 </head>
 <body>
-    {% include "requisition/_sidebar.html" %}
+    {% include "main/_sidebar.html" %}
     <div class="main-content">
         {% block page_content %}{% endblock %}
     </div>
